# ledger-hw

./: Cargo.toml  LICENSE  README.md
app-btc/: Cargo.toml  README.md
app-btc/examples/: getfirmwareversion.rs  getpublickeywallet.rs  lshid.rs  simple_tx.rs  simple_tx_bech32.rs  simpletx.rs
app-btc/src/: constant.rs  error.rs  input.rs  lib.rs  setup.rs  util.rs  wallet.rs
ledger/: Cargo.toml  README.md
ledger/src/: device.rs  lib.rs  magic.rs  status.rs
transport/: Cargo.toml  README.md
transport-hid/: Cargo.toml  README.md
transport-hid/src/: lib.rs  linux.rs
transport-mock/: Cargo.toml  README.md
transport-mock/src/: lib.rs
transport/src/: lib.rs
