[package]
name = "ledger-hw-app-btc"
version = "0.0.1"
authors = ["Edouard Paris <m@edouard.paris>"]
description = "Helpers for Ledger Bitcoin app"
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/edouardparis/ledger-hw.git"
documentation = "https://docs.rs/ledger-hw-app-btc/"

[dependencies]
bitcoin = "0.23.0"
ledger-hw = "0.0.1"
ledger-hw-transport = "0.0.1"

[dev-dependencies]
futures-await-test = "0.3.0"
hex = "0.4.2"
bitcoin = "0.23.0"
hidapi = { version = "1.2.0", default-features = false, features = ["linux-static-hidraw"] }
ledger-hw-transport = "0.0.1"
ledger-hw-transport-hid = "0.0.1"
ledger-hw-transport-mock = "0.0.1"
tokio = {version = "0.2.13", features = ["macros"]}
