[package]
name = "ledger-hw"
version = "0.0.1"
authors = ["Edouard Paris <m@edouard.paris>"]
edition = "2018"
description = "Constants for Ledger Hardware wallets"
readme = "README.md"
license = "MIT"
repository = "https://github.com/edouardparis/ledger-hw.git"
documentation = "https://docs.rs/ledger-hw/"

[dependencies]
