[package]
name = "ledger-hw-transport-hid"
version = "0.0.1"
authors = ["Edouard Paris <m@edouard.paris>"]
description = "Ledger hardware HID transport"
edition = "2018"
readme = "README.md"
repository = "https://github.com/edouardparis/ledger-hw.git"
documentation = "https://docs.rs/ledger-hw-app-btc/"

[dependencies]
async-trait = "0.1.24"
byteorder = "1.3.4"
hidapi = { version = "1.2.0", default-features = false, features = ["linux-static-hidraw"] }
libc = "0.2.50"
nix = "0.13.0"
ledger-hw = { path = "../ledger"}
ledger-hw-transport = { path = "../transport"}
