[package]
name = "ledger-hw-transport-mock"
version = "0.1.0"
authors = ["Edouard Paris <m@edouard.paris>"]
description = "Ledger hardware Mock transport"
edition = "2018"
readme = "README.md"
repository = "https://github.com/edouardparis/ledger-hw.git"
documentation = "https://docs.rs/ledger-hw-app-btc/"

[dependencies]
async-trait = "0.1.24"
hex = "0.4.2"
ledger-hw-transport = { path = "../transport"}
regex = "1.3.6"
