[package]
name = "ledger-hw-transport-mock"
version = "0.0.1"
authors = ["Edouard Paris <m@edouard.paris>"]
description = "Ledger hardware Mock transport"
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/edouardparis/ledger-hw.git"
documentation = "https://docs.rs/ledger-hw-app-btc/"

[dependencies]
async-trait = "0.1.24"
hex = "0.4.2"
ledger-hw-transport = "0.0.1"
regex = "1.3.6"
