[package]
name = "ledger-hw-transport"
version = "0.0.1"
authors = ["Edouard Paris <m@edouard.paris>"]
description = "Generic Trait for ledger hardware transport"
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/edouardparis/ledger-hw.git"
documentation = "https://docs.rs/ledger-hw-app-btc/"

[dependencies]
async-trait = "0.1.24"
ledger-hw = "0.0.1"

[dev-dependencies]
futures-await-test = "0.3.0"
